--- a/css/styles.css
+++ b/css/styles.css
@@ -11341,9 +11341,9 @@ html {
 .btn-social {
   border-radius: 100%;
   display: inline-flex;
-  width: 3.25rem;
-  height: 3.25rem;
-  font-size: 1.25rem;
+  width: 5rem;
+  height: 5rem;
+  font-size: 2rem;
   justify-content: center;
   align-items: center;
 }
@@ -11497,16 +11497,16 @@ html {
   }
 }
 
-.footer {
+/* .footer {
   padding-top: 5rem;
   padding-bottom: 5rem;
   background-color: #1f1b24;
   color: #fff;
   border-bottom: 2px solid #662e68;
-}
+} */
 
 .copyright {
-  background-color: #3a3b66;
+  background-color: #1f1b24;
 }
 
 .custom-header {
@@ -11533,6 +11533,7 @@ html {
   background-color: #b0b8db;
   border-bottom: 5px solid #662e68;
   color: #1f1b24;
+  padding-bottom: 2rem;
 }
 
 .custom-title {
